# chip8-demo

./: CMakeLists.txt  info.txt
include/: cpu.h  system.h
src/: cpu.c  main.c  system.c
